kubernetes/clusters/k0s/storage/minio/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: minio
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: minio
  ingress:
    # loki
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: loki
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP
